force-app/main/default/objects/copado_labs__Product_Configuration_Commits__c/copado_labs__Product_Configuration_Commits__c.object-meta.xml
<CustomObject>
    <label>Product Configuration Rule Commit</label>
    <nameField>
        <label>Product Configuration Commits Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Configuration Rule Commits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>