force-app/main/default/objects/copado_labs__Product_Configuration_Commits__c/fields/copado_labs__API_Name__c.field-meta.xml
<CustomField>
    <fullName>copado_labs__API_Name__c</fullName>
    <label>API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>