force-app/main/default/objects/copado_labs__Product_Configuration_Commits__c/fields/copado_labs__Commit_Name__c.field-meta.xml
<CustomField>
    <fullName>copado_labs__Commit_Name__c</fullName>
    <displayFormat>PCR-{0000}</displayFormat>
    <label>Commit Name</label>
    <type>AutoNumber</type>
</CustomField>