force-app/main/default/objects/copado_labs__Product_Configuration_Commits__c/fields/copado_labs__User_Story__c.field-meta.xml
<CustomField>
    <fullName>copado_labs__User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story</label>
    <referenceTo>copado__User_Story__c</referenceTo>
    <relationshipLabel>Product Configuration Rule Commits</relationshipLabel>
    <relationshipName>Product_Configuration_Rule_Commits</relationshipName>
    <type>Lookup</type>
</CustomField>